<resources>
    <string name="app_name">W1D4HTipCalculator</string>
    <string name="totalAmt">Total Amount to Pay </string>
    <string name="checkAmt">checkAmt</string>
    <string name="down">10%</string>
    <string name="middle">15%</string>
    <string name="up">20%</string>
    <string name="tipAmt">Tip Amount</string>
    <string name="enter_amount">Enter amount here</string>
    <string name="pay">Pay</string>

</resources>
